2011-01-04  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makevars: Replace implicit variable $^ with explicit list

2011-01-02  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Rcpp-quickref/Rcpp-quickref.Rnw: Applied patch with
	additional documentation by Christian Gunning

2010-12-23  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/RObject.h: New internal class SEXPstack to handle
	garbage collection. Presumably more efficient than R_PreserveObject
	and R_ReleaseObject

	* inst/include/Rcpp/sugar/operators/times.h: More efficient operator*
	for REALSXP sugar expressions, avoiding unnecessary NA tests.

	* inst/include/Rcpp/sugar/operators/divides.h: More efficient
	operator/ for REALSXP sugar expressions, avoiding unnecessary NA
	tests.

	* inst/include/Rcpp/sugar/operators/minus.h: More efficient operator- for
	REALSXP sugar expressions, avoiding unnecessary NA tests.

2010-12-22  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/sugar/operators/plus.h: More efficient operator+
	for REALSXP sugar expressions, avoiding unnecessary NA tests.

2010-12-22  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runit.Vector.R: Applied patch by Christian Gunning
	to add more tests for complex-typed vectors

2010-12-20  Dirk Eddelbuettel  <edd@debian.org>

	* R/inline.R (Rcpp.plugin.maker): Reverse order in PKG_LIBS

2010-12-19  Dirk Eddelbuettel  <edd@debian.org>

 	* DESCRIPTION: Release 0.9.0

        * debian/*: Similarly updated for new release to Debian

2010-12-18  Dirk Eddelbuettel  <edd@debian.org>

	* inst/announce/ANNOUNCE-0.9.0.txt: Started announcement post

	* inst/unitTests/runit.Date.R: Added new unit tests for date and
	datetime from string

2010-12-17  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/Datetime.h: correct default format to use %OS for
	fractional seconds and not the popular typo %OS (i.e. ooh, not zero)

	* src/Datetime.cpp: add missing as.POSIXct() after strptime for